@@ -17,6 +17,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
   From William Deegan:
     - Fix yacc tool, not respecting YACC set at time of tool initialization.
     - Refactor SCons.Tool to move all common shared and loadable module linking logic to SCons.Tool.linkCommon
+    - Remove using pywin32 to retrieve peak memory usage on Win32 for `--debug=memory`
 
   From Michał Górny:
     - Fix dvipdf test failure due to passing incorrect flag to dvipdf.
